--- a/.github/actions/setup-dotnet/action.yml
+++ b/.github/actions/setup-dotnet/action.yml
@@ -1,4 +1,4 @@
-﻿name: Set up .NET
+name: Set up .NET
 description: Sets up the .NET SDK.
 
 inputs:
@@ -23,6 +23,6 @@ runs:
         "DOTNET_CLI_TELEMETRY_OPTOUT=true" >> $Env:GITHUB_ENV
         $Env:DOTNET_CLI_TELEMETRY_OPTOUT = "true"
     - name: Set up .NET
-      uses: actions/setup-dotnet@v2
+      uses: actions/setup-dotnet@v3
       with:
         dotnet-version: ${{ inputs.dotnet-version }}
