--- a/.github/workflows/test-analysis-failure.yml
+++ b/.github/workflows/test-analysis-failure.yml
@@ -16,7 +16,7 @@ on:
       dotnet-version:
         required: false
         type: string
-        default: 6.0.*
+        default: 6.0.x
         description: Version of the .NET SDK to set up.
       build-directory:
         required: false
