--- a/.github/actions/setup-dotnet/action.yml
+++ b/.github/actions/setup-dotnet/action.yml
@@ -10,7 +10,7 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Set environment variables
+    - name: Set Environment Variables 
       shell: pwsh
       run: |
         # This ceremony is needed to make the env vars available in subsequent steps too, see:
@@ -22,7 +22,15 @@ runs:
 
         "DOTNET_CLI_TELEMETRY_OPTOUT=true" >> $Env:GITHUB_ENV
         $Env:DOTNET_CLI_TELEMETRY_OPTOUT = "true"
+
+    - name: Check if .NET Version Already Installed
+      shell: pwsh
+      run: |
+        $isDotNetSdkVersionAlreadyInstalled = ${{ github.action_path }}/Get-DotNetSdkVersionIsAlreadyInstalled.ps1
+        "IS_DOTNET_SDK_VERSION_ALREADY_INSTALLED=$isDotNetSdkVersionAlreadyInstalled" >> $Env:GITHUB_ENV
+
     - name: Set up .NET
       uses: actions/setup-dotnet@v3.0.1
+      if: env.IS_DOTNET_SDK_VERSION_ALREADY_INSTALLED != 'True'
       with:
         dotnet-version: ${{ inputs.dotnet-version }}
