Revert "Fixing action"
This reverts commit 43b8cf6659d338cbe784158735effbab7e15454e.

--- a/.github/workflows/validate-pull-request.yml
+++ b/.github/workflows/validate-pull-request.yml
@@ -5,6 +5,9 @@ on:
 
 jobs:
   validate-pull-request:
-    uses: Lombiq/GitHub-Actions/.github/actions/check-merge-conflict@issue/OSOE-144
-    env:
-      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    runs-on: ubuntu-latest
+    steps:
+    - name: Check for Merge Conflict in PR
+      uses: Lombiq/GitHub-Actions/.github/actions/check-merge-conflict@issue/OSOE-144
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
