--- a/.github/workflows/verify-this-repo.yml
+++ b/.github/workflows/verify-this-repo.yml
@@ -10,4 +10,4 @@ jobs:
     uses: Lombiq/GitHub-Actions/.github/workflows/verify-submodule-pull-request.yml@dev  
 
   call-validate-pull-request:
-    uses: Lombiq/GitHub-Actions/.github/workflows/validate-pull-request.yml@dev  
+    uses: Lombiq/GitHub-Actions/.github/workflows/validate-pull-request.yml@issue/OSOE-144  
