--- a/.github/workflows/verify-submodule-pull-request.yml
+++ b/.github/workflows/verify-submodule-pull-request.yml
@@ -16,3 +16,8 @@ jobs:
       uses: Lombiq/GitHub-Actions/.github/actions/verify-submodule-pull-request@dev
       with:
         title: ${{ github.event.pull_request.title }}
+
+    - name: Check for Merge Conflict in PR
+      uses: Lombiq/GitHub-Actions/.github/actions/check-merge-conflict@issue/OSOE-144
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
