--- a/.github/actions/verify-dotnet-consolidation/action.yml
+++ b/.github/actions/verify-dotnet-consolidation/action.yml
@@ -24,7 +24,7 @@ runs:
     - name: Setup
       shell: pwsh
       run: |
-        Import-Module "${{ github.action_path }}/../../../Scripts/Install-DotNetTool.ps1"
+        Import-Module "${{ github.action_path }}/../../../Scripts/Install-DotNetTool.psm1"
         Install-DotNetTool -Name "dotnet-consolidate" -Version "2.0.0" -Global
     - name: Verify consolidation status
       shell: pwsh
