Converting Install-DotNetTool back to a PS module to test importing

--- a/.github/actions/verify-dotnet-consolidation/action.yml
+++ b/.github/actions/verify-dotnet-consolidation/action.yml
@@ -21,7 +21,8 @@ runs:
     - name: Setup
       shell: pwsh
       run: |
-        & "${{ github.action_path }}/../../../Scripts/Install-DotNetTool.ps1" -Name "dotnet-consolidate" -Version "2.0.0" -Global
+        Import-Module "${{ github.action_path }}/../../../Scripts/Install-DotNetTool"
+        Install-DotNetTool -Name "dotnet-consolidate" -Version "2.0.0" -Global
     - name: Verify consolidation status
       shell: pwsh
       working-directory: ${{ inputs.directory }}
