--- a/.github/actions/create-jira-issues-for-community-activities/action.yml
+++ b/.github/actions/create-jira-issues-for-community-activities/action.yml
@@ -21,6 +21,7 @@ runs:
     - name: Setup Scripts
       shell: pwsh
       run: |
+        "${{ github.action_path }}" >> $Env:GITHUB_PATH
         $Env:PSModulePath = $Env:PSModulePath + ";$((Resolve-Path "${{ github.action_path }}/../../../Scripts").Path)"
 
     # Don't do anything for pull requests that are already related to an issue, i.e. their titles start with an issue
