--- a/.github/actions/verify-submodule-pull-request/action.yml
+++ b/.github/actions/verify-submodule-pull-request/action.yml
@@ -20,7 +20,7 @@ runs:
       run: |
         Write-Output "Pull Request Title: ${{ inputs.title }}"
 
-        $Env:PSModulePath += ";$((Resolve-Path "${{ github.action_path }}/../../../Scripts").Path)"
+        $Env:PSModulePath += [System.IO.Path]::PathSeparator + "$((Resolve-Path "${{ github.action_path }}/../../../Scripts").Path)"
         "${{ github.action_path }}" >> $Env:GITHUB_PATH
 
         New-Item -ItemType File -Force $Profile | Out-Null
