--- a/.github/actions/verify-dotnet-consolidation/action.yml
+++ b/.github/actions/verify-dotnet-consolidation/action.yml
@@ -21,7 +21,7 @@ runs:
     - name: Setup Scripts
       shell: pwsh
       run: |
-        $Env:PSModulePath += [System.IO.Path]::PathSeparator + "$((Resolve-Path "${{ github.action_path }}/../../../Scripts").Path)"
+        (Resolve-Path "${{ github.action_path }}/../../../Scripts").Path >> $Env:GITHUB_PATH
     - name: Setup tool
       shell: pwsh
       run: |
