--- a/.github/workflows/check-spelling.yml
+++ b/.github/workflows/check-spelling.yml
@@ -44,6 +44,14 @@ jobs:
         with:
           submodules: 'recursive'
 
+      - name: Stub repo layout
+        shell: bash
+        run: |
+          rm -rf -git
+          git init .
+          git add .
+          git commit -m 'stub commit --includes submodules'
+
       - name: Check Spelling
         uses: Lombiq/GitHub-Actions/.github/actions/check-spelling@issue/OSOE-158
         with:
