--- a/.github/actions/verify-dotnet-consolidation/action.yml
+++ b/.github/actions/verify-dotnet-consolidation/action.yml
@@ -18,14 +18,11 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - name: Setup Scripts
-      shell: pwsh
-      run: |
-        (Resolve-Path "${{ github.action_path }}/../../../Scripts").Path >> $Env:GITHUB_PATH
-    - name: Setup tool
-      shell: pwsh
-      run: |
-        Install-DotNetTool -Name "dotnet-consolidate" -Version "2.0.0" -Global
+    - name: Install dotnet-consolidate
+      uses: Lombiq/GitHub-Actions/.github/actions/install-dotnet-tool@issue/OSOE-385
+      with:
+        name: dotnet-consolidate
+        version: 2.0.0
     - name: Verify consolidation status
       shell: pwsh
       working-directory: ${{ inputs.directory }}
