Fixing input parameter usage in install-dotnet-tool

--- a/.github/actions/install-dotnet-tool/action.yml
+++ b/.github/actions/install-dotnet-tool/action.yml
@@ -20,4 +20,4 @@ runs:
     - name: Install tool
       shell: pwsh
       run: |
-        Install-DotNetTool -Name "${{ inputs.directory }}" -Version "${{ inputs.version }}" -Global
+        Install-DotNetTool -Name "${{ inputs.name }}" -Version "${{ inputs.version }}" -Global
