--- a/.github/actions/install-dotnet-tool/action.yml
+++ b/.github/actions/install-dotnet-tool/action.yml
@@ -1,6 +1,5 @@
 name: Install .NET tool
-description: >
-  Installs a .NET tool globally.
+description: Installs a .NET tool globally.
 
 inputs:
   name:
