--- a/.github/workflows/build-and-test-orchard-core.yml
+++ b/.github/workflows/build-and-test-orchard-core.yml
@@ -100,7 +100,7 @@ jobs:
 
     - name: Verify that .NET packages are consolidated
       if: ${{ inputs.verify-dotnet-consolidation }}
-      uses: Lombiq/GitHub-Actions/.github/actions/verify-dotnet-consolidation@issue/OSOE-385
+      uses: Lombiq/GitHub-Actions/.github/actions/verify-dotnet-consolidation@dev
       with:
         directory: ${{ inputs.build-directory }}
 
