--- a/.github/actions/check-spelling/action.yml
+++ b/.github/actions/check-spelling/action.yml
@@ -37,7 +37,7 @@ runs:
   steps:
   - name: Check Spelling
     # Prerelease, this commit includes a specific fix we utilize. Use v0.0.21 once available.
-    uses: check-spelling/check-spelling@5ca3511e047d3e39719b1a41b56397ecec0e27d5
+    uses: check-spelling/check-spelling@prerelease
     with:
       dictionary_source_prefixes: ${{ inputs.dictionary-source-prefixes }}
       extra_dictionaries: ${{ inputs.extra-dictionaries }}
