--- a/.github/workflows/validate-this-pull-request.yml
+++ b/.github/workflows/validate-this-pull-request.yml
@@ -10,4 +10,4 @@ jobs:
     uses: Lombiq/GitHub-Actions/.github/workflows/verify-submodule-pull-request.yml@dev
 
   call-check-merge-conflict:
-    uses: Lombiq/GitHub-Actions/.github/workflows/validate-pull-request.yml@issue/OSOE-144
+    uses: Lombiq/GitHub-Actions/.github/workflows/validate-pull-request.yml@dev
