--- a/.github/workflows/check-spelling.yml
+++ b/.github/workflows/check-spelling.yml
@@ -27,7 +27,7 @@ on:
         description: Spelling configuration directory
         required: false
         type: string
-        default: .github/actions/check-spelling
+        default: .github/actions/spelling
       spell-check-this:
         description: Repository with default configuration to use, the default from Check Spelling is ''
         required: false
@@ -55,7 +55,7 @@ jobs:
           git commit -m 'stub commit -- includes submodules'
 
       - name: Check Spelling
-        uses: Lombiq/GitHub-Actions/.github/actions/check-spelling@issue/OSOE-158
+        uses: Lombiq/GitHub-Actions/.github/actions/spelling@issue/OSOE-158
         with:
           dictionary-source-prefixes: ${{ inputs.dictionary-source-prefixes }}
           extra-dictionaries: ${{ inputs.extra-dictionaries }}
