--- a/.github/workflows/reset-environment.yml
+++ b/.github/workflows/reset-environment.yml
@@ -118,7 +118,10 @@ jobs:
       uses: Azure/powershell@38b0aa56c413239bd9dcc898d1f62986233658bc
       with:
         inlineScript: |
-          Stop-AzWebAppSlot -ResourceGroupName ${{ inputs.resource-group-name }} -Name ${{ inputs.app-name }} -Slot ${{ inputs.destination-slot-name }}
+          Stop-AzWebAppSlot `
+            -ResourceGroupName ${{ inputs.resource-group-name }} `
+            -Name ${{ inputs.app-name }} `
+            -Slot ${{ inputs.destination-slot-name }}
         azPSVersion: latest
 
     - name: Replace Media
@@ -151,7 +154,7 @@ jobs:
           -WebAppName ${{ inputs.app-name }} `
           -SlotName ${{ inputs.destination-slot-name }} `
           -ConnectionStringName ${{ inputs.database-connection-string-name }} `
-          -ServiceObjectiveName ${{ inputs.service-objective-name }} `
+          -ServiceObjectiveName ${{ inputs.service-objective-name }}
 
     - name: Add destination contained User to destination database
       run: |
@@ -160,7 +163,7 @@ jobs:
           -WebAppName ${{ inputs.app-name }} `
           -DatabaseSlotName ${{ inputs.destination-slot-name }} `
           -DatabaseConnectionStringName ${{ inputs.database-connection-string-name }} `
-          -UserConnectionStringName ${{ inputs.user-connection-string-name }} `
+          -UserConnectionStringName ${{ inputs.user-connection-string-name }}
 
     - name: Remove source contained User from destination database
       run: |
@@ -170,14 +173,17 @@ jobs:
           -DatabaseSlotName ${{ inputs.destination-slot-name }} `
           -UserSlotName ${{ inputs.source-slot-name }} `
           -DatabaseConnectionStringName ${{ inputs.database-connection-string-name }} `
-          -UserConnectionStringName ${{ inputs.user-connection-string-name }} `
+          -UserConnectionStringName ${{ inputs.user-connection-string-name }}
 
     - name: Start Web App Slot
       # v1.1.0
       uses: Azure/powershell@38b0aa56c413239bd9dcc898d1f62986233658bc
       with:
         inlineScript: |
-          Start-AzWebAppSlot -ResourceGroupName ${{ inputs.resource-group-name }} -Name ${{ inputs.app-name }} -Slot ${{ inputs.destination-slot-name }}
+          Start-AzWebAppSlot `
+          -ResourceGroupName ${{ inputs.resource-group-name }} `
+          -Name ${{ inputs.app-name }} `
+          -Slot ${{ inputs.destination-slot-name }}
         azPSVersion: latest
 
     - name: Ping Web App Slot
