--- a/.github/workflows/reset-environment.yml
+++ b/.github/workflows/reset-environment.yml
@@ -113,67 +113,25 @@ jobs:
         creds: ${{ secrets.AZURE_APP_SERVICE_RESET_SERVICE_PRINCIPAL }}
         enable-AzPSSession: true
 
-    - name: Stop Web App Slot
-      # v1.1.0
-      uses: Azure/powershell@38b0aa56c413239bd9dcc898d1f62986233658bc
-      with:
-        inlineScript: |
-          Stop-AzWebAppSlot `
-            -ResourceGroupName ${{ inputs.resource-group-name }} `
-            -Name ${{ inputs.app-name }} `
-            -Slot ${{ inputs.destination-slot-name }}
-        azPSVersion: latest
-
     - name: Replace Media
       run: |
-        Set-AzureWebAppStorageContentFromStorage `
-          -ResourceGroupName ${{ inputs.resource-group-name }}`
-          -WebAppName  ${{ inputs.app-name }} `
-          -SourceSlotName ${{ inputs.source-slot-name }} `
-          -DestinationSlotName ${{ inputs.slot-name }} `
-          -ConnectionStringName ${{ inputs.storage-connection-string-name }} `
-          -ContainerBlackList @(${{ fromJson(inputs.container-black-list) }}) `
-          -ContainerWhiteList @(${{ fromJson(inputs.container-white-list) }}) `
-          -FolderBlackList @(${{ fromJson(inputs.folder-black-list) }}) `
-          -FolderWhiteList @(${{ fromJson(inputs.folder-white-list) }})
+        Set-AzureWebAppStorageContentFromStorage 
 
     - name: Replace Database
       run: |
-        Copy-AzureWebAppSqlDatabase `
-          -ResourceGroupName ${{ inputs.resource-group-name }} `
-          -WebAppName ${{ inputs.app-name }}  `
-          -SourceSlotName ${{ inputs.source-slot-name }} `
-          -DestinationSlotName ${{ inputs.slot-name }} `
-          -ConnectionStringName ${{ inputs.database-connection-string-name }} `
-          -Force
+        Copy-AzureWebAppSqlDatabase
 
     - name: Scale Database
       run: |
-        Set-AzureWebAppSqlDatabaseServiceObjective `
-          -ResourceGroupName ${{ inputs.resource-group-name }} `
-          -WebAppName ${{ inputs.app-name }} `
-          -SlotName ${{ inputs.destination-slot-name }} `
-          -ConnectionStringName ${{ inputs.database-connection-string-name }} `
-          -ServiceObjectiveName ${{ inputs.service-objective-name }}
+        Set-AzureWebAppSqlDatabaseServiceObjective
 
     - name: Add destination contained User to destination database
       run: |
-        Add-AzureWebAppSqlDatabaseContainedUser `
-          -ResourceGroupName ${{ inputs.resource-group-name }} `
-          -WebAppName ${{ inputs.app-name }} `
-          -DatabaseSlotName ${{ inputs.destination-slot-name }} `
-          -DatabaseConnectionStringName ${{ inputs.database-connection-string-name }} `
-          -UserConnectionStringName ${{ inputs.user-connection-string-name }}
+        Add-AzureWebAppSqlDatabaseContainedUser
 
     - name: Remove source contained User from destination database
       run: |
-        Remove-AzureWebAppSqlDatabaseContainedUser `
-          -ResourceGroupName ${{ inputs.resource-group-name }} ``
-          -WebAppName ${{ inputs.app-name }} `
-          -DatabaseSlotName ${{ inputs.destination-slot-name }} `
-          -UserSlotName ${{ inputs.source-slot-name }} `
-          -DatabaseConnectionStringName ${{ inputs.database-connection-string-name }} `
-          -UserConnectionStringName ${{ inputs.user-connection-string-name }}
+        Remove-AzureWebAppSqlDatabaseContainedUser
 
     - name: Start Web App Slot
       # v1.1.0
