Testing imported modules

--- a/.github/workflows/reset-environment.yml
+++ b/.github/workflows/reset-environment.yml
@@ -121,6 +121,7 @@ jobs:
 
     - name: Replace Database
       run: |
+        Get-Module
         Copy-AzureWebAppSqlDatabase
 
     - name: Scale Database
