Trying to make imported modules visible

--- a/.github/workflows/reset-environment.yml
+++ b/.github/workflows/reset-environment.yml
@@ -118,7 +118,7 @@ jobs:
 
     - name: Replace Media
       run: |
-        Get-Module
+        Get-Module | Write-Output
 
     - name: Replace Database
       run: |
