--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -44,8 +44,9 @@ jobs:
         with:
           submodules: 'recursive'
 
+      # This is a workaround for the spelling workflow to check submodules too in the repository.
       - name: Stub repo layout
-        shell: bash
+        shell: pwsh
         run: |
           git config --global user.email "you@example.com"
           git config --global user.name "Your Name"
