--- a/.github/actions/publish-nuget/action.yml
+++ b/.github/actions/publish-nuget/action.yml
@@ -40,7 +40,7 @@ runs:
         '@.Trim()
 
         Write-Output "NuGet Source: $source"
-        Write-Output "::set-output name=source-url::$source"
+        Write-Output "source-url=$source" >> $GITHUB_OUTPUT
 
         $version = @'
         ${{ inputs.publish-version }}
@@ -60,7 +60,7 @@ runs:
         }
         
         Write-Output "Target Version: $version"
-        Write-Output "::set-output name=publish-version::$version"
+        Write-Output "publish-version=$version" >> $GITHUB_OUTPUT
         
         "${{ github.action_path }}" >> $Env:GITHUB_PATH
 
