--- a/.github/workflows/build-dotnet.yml
+++ b/.github/workflows/build-dotnet.yml
@@ -88,7 +88,7 @@ jobs:
         submodules: 'recursive'
 
     - name: Set up .NET
-      uses: Lombiq/GitHub-Actions/.github/actions/setup-dotnet@dev
+      uses: Lombiq/GitHub-Actions/.github/actions/setup-dotnet@issue/OSOE-397
       with:
         dotnet-version: ${{ inputs.dotnet-version }}
 
