--- a/.github/actions/create-jira-issues-for-community-activities/action.yml
+++ b/.github/actions/create-jira-issues-for-community-activities/action.yml
@@ -93,7 +93,7 @@ runs:
       with:
         project: ADHOC
         issuetype: Task
-        summary: ${{ steps.issue-details.outputs.summary }}
+        summary: Testing
         description: Testing
         fields: ${{ steps.issue-details.outputs.fields }}
 
