--- a/.github/actions/test-dotnet/action.yml
+++ b/.github/actions/test-dotnet/action.yml
@@ -49,19 +49,16 @@ runs:
 
     # Note that uploading the failure dumps would fail under Windows if the path were too long, regardless of
     # LongPathsEnabled, see: https://github.com/actions/upload-artifact/issues/309. To get around that we merge all
-    # FailureDumps into the solution root. The following two steps need to be success() || failure() (excluding the
-    # workflow being cancelled), so if there's a failure dump it'll be uploaded even if the tests are ultimately passed
-    # after retries.
-    # The same is true for the next step as well.
+    # FailureDumps into the solution root.
     - name: Merge FailureDumps
       shell: pwsh
-      if: (success() || failure()) && hashFiles(format('{0}/test/**/FailureDumps', inputs.build-directory))
+      if: hashFiles(format('{0}/test/**/FailureDumps', inputs.build-directory))
       run: Merge-FailureDumps -Directory "${{ inputs.build-directory }}"
 
     - name: Upload UI testing artifacts
       uses: actions/upload-artifact@v3
       # We don't need additional conditions, because of the "if-no-files-found" setting.
-      if: success() || failure()
+      if: always()
       with:
         name: ui-test-failure-dump-${{ inputs.build-directory }}-${{ matrix.machine-type }}
         path: |
@@ -72,7 +69,7 @@ runs:
     - name: Test Report
       # v8
       uses: phoenix-actions/test-reporting@1e9b578818d03d6df50ce8e60d024a000bf3ab63
-      if: success() || failure()
+      if: always()
       with:
         name: Test Results (${{inputs.build-directory}}|${{ matrix.machine-type }})
         path: '${{inputs.build-directory}}/**/*.trx'
