--- a/.github/workflows/build-and-test-orchard-core.yml
+++ b/.github/workflows/build-and-test-orchard-core.yml
@@ -105,6 +105,7 @@ jobs:
         directory: ${{ inputs.build-directory }}
 
     - name: Enable Node corepack
+      if: always()
       uses: Lombiq/GitHub-Actions/.github/actions/enable-corepack@dev
 
     - name: Build and Static Code Analysis
