More always test

--- a/.github/actions/test-dotnet/action.yml
+++ b/.github/actions/test-dotnet/action.yml
@@ -81,4 +81,4 @@ runs:
       if: always()
       shell: pwsh
       run: |
-        Write-Output "This worked!"
+        Write-Output "Did this work? $(Get-Date)"
