Testing check-user-permission

--- a/.github/actions/check-merge-conflict/action.yml
+++ b/.github/actions/check-merge-conflict/action.yml
@@ -4,6 +4,7 @@ description: Checks for merge conflicts in the current pull request.
 runs:
   using: "composite"
   steps:
+    - uses: actions-cool/check-user-permission@a0668c9aec87f3875fc56170b6452a453e9dd819
     - name: Check for merge conflict
       # releases/2.x
       uses: eps1lon/actions-label-merge-conflict@b8bf8341285ec9a4567d4318ba474fee998a6919
