--- a/.github/actions/check-merge-conflict/action.yml
+++ b/.github/actions/check-merge-conflict/action.yml
@@ -5,8 +5,11 @@ runs:
   using: "composite"
   steps:
     # v2.2
-    - uses: actions-cool/check-user-permission@cd622002ff25c2311d2e7fb82107c0d24be83f9b
+    - name: Check User Permissions
+      id: check-user-permissions
+      uses: actions-cool/check-user-permission@cd622002ff25c2311d2e7fb82107c0d24be83f9b
     - name: Check for merge conflict
+      if: steps.check-user-permissions.user-permission != 'read'
       # releases/2.x
       uses: eps1lon/actions-label-merge-conflict@b8bf8341285ec9a4567d4318ba474fee998a6919
       with:
