--- a/.github/actions/check-merge-conflict/action.yml
+++ b/.github/actions/check-merge-conflict/action.yml
@@ -9,7 +9,7 @@ runs:
       id: check-user-permissions
       uses: actions-cool/check-user-permission@cd622002ff25c2311d2e7fb82107c0d24be83f9b
       with:
-        username: "triggering_actor"
+        username: github.triggering_actor
 
     - name: Check for merge conflict
       if: steps.check-user-permissions.user-permission != 'read'
